<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewclass.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <include layout="@layout/toolbar_logout"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/outline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin_username_editText"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textNoSuggestions"
                android:hint="Username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/outline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin_password_editText"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="textPassword"
                android:hint="Password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_login_24"
                android:layout_weight="1"
                android:id="@+id/sign_in_button"
                app:iconPadding="0dp"
                android:padding="0dp"
                app:iconGravity="textStart"
                android:backgroundTint="@color/blue2"
                app:iconTint="@color/white"/>

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="\u2386 QR CODE"
                android:fontFamily="@font/comedysketchdemoregular"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/sign_in_with_qrcode_button"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/blue2"/>

        </LinearLayout>


        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN IN WITH THIS DEVICE"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"

            android:id="@+id/signinactivity_sign_in_with_device"
            android:layout_gravity="center"
            android:shadowRadius="@integer/material_motion_duration_long_1"
            android:backgroundTint="@color/blue2"/>

        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/signinactivity_sign_up_button"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue2"/>

    </LinearLayout>

</LinearLayout>