...
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
        <Button
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_playerMenu_myProfile"
            android:text="My Profile"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="@color/blue2"/>
...
